[project]
name = "yellow-fleet"
version = "0.1.0"
description = "Liminal Community, Self Managed"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "trio>=0.28.0",
    "smolagents[litellm]==1.4.2",
    "fastapi[standard]>=0.115.6",
]

[dependency-groups]
dev = [
    "pytest-trio>=0.8.0",
    "pytest>=8.3.4",
    "hypothesis>=6.124.1",
    "ruff>=0.9.2",
    "mypy>=1.14.1",
]

[tool.uv.sources]
smolagents = { path = "smolagents-1.4.2-py3-none-any.whl" }

[tool.ruff]
select = ["E", "F", "W", "C90", "B", "I", "ANN"]

line-length = 88

exclude = [
    ".venv",
    "build",
    "dist",
    "migrations",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_unreachable = true
strict = true